# 2025-2_PAA-Trabalho_01

./: CMakeLists.txt  README.md
include/: DataStructures.h  ImageUtils.h
src/: DataStructures.cpp  ImageUtils.cpp  main.cpp
